[#469595] Bugfix align checkbox

--- a/src/layout/resources/horizontalLayout.css
+++ b/src/layout/resources/horizontalLayout.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-content: stretch;
     justify-content: stretch;
-    align-items: stretch;
+    align-items: center;
     flex-shrink: 0;
     flex-wrap: nowrap;
 }
